#!/usr/bin/env python3
"""
TTS統合モジュール
複数の音声合成サービスを統合して使用
"""
import asyncio
import json
from datetime import datetime
from pathlib import Path
from typing import List, Dict, Any, Optional
from dataclasses import dataclass
from enum import Enum

# SimpleLogger クラス
class SimpleLogger:
    @staticmethod
    def info(message: str):
        print(f"[INFO] {message}")
    
    @staticmethod
    def error(message: str):
        print(f"[ERROR] {message}")
    
    @staticmethod
    def warning(message: str):
        print(f"[WARNING] {message}")

logger = SimpleLogger()

class TTSProvider(Enum):
    """TTS プロバイダー"""
    ELEVENLABS = "elevenlabs"
    OPENAI = "openai"
    AZURE = "azure"
    GOOGLE_CLOUD = "google_cloud"

@dataclass
class AudioInfo:
    """音声情報"""
    file_path: Path
    duration: float
    quality_score: float
    sample_rate: int
    file_size: int
    language: str
    channels: int = 2
    provider: str = "unknown"
    voice_id: str = "default"

@dataclass
class VoiceConfig:
    """音声設定"""
    voice_id: str
    language: str
    gender: str
    age_range: str
    accent: str
    quality: str

class TTSIntegration:
    """TTS統合クラス"""
    
    def __init__(self, api_keys: Dict[str, str]):
        self.api_keys = api_keys
        self.providers = {}
        self.default_provider = TTSProvider.ELEVENLABS
        self._initialize_providers()
    
    def _initialize_providers(self):
        """プロバイダーを初期化"""
        if self.api_keys.get("elevenlabs"):
            self.providers[TTSProvider.ELEVENLABS] = ElevenLabsTTS(self.api_keys["elevenlabs"])
        
        if self.api_keys.get("openai"):
            self.providers[TTSProvider.OPENAI] = OpenAITTS(self.api_keys["openai"])
        
        if self.api_keys.get("azure_speech"):
            self.providers[TTSProvider.AZURE] = AzureTTS(
                self.api_keys["azure_speech"], 
                self.api_keys.get("azure_region", "eastus")
            )
        
        if self.api_keys.get("google_cloud"):
            self.providers[TTSProvider.GOOGLE_CLOUD] = GoogleCloudTTS(self.api_keys["google_cloud"])
    
    async def generate_audio(
        self,
        text: str,
        output_path: Path,
        voice_config: Optional[VoiceConfig] = None,
        provider: Optional[TTSProvider] = None
    ) -> AudioInfo:
        """音声を生成"""
        try:
            # プロバイダー選択
            selected_provider = provider or self._select_best_provider(text, voice_config)
            
            if selected_provider not in self.providers:
                raise ValueError(f"プロバイダー {selected_provider.value} が利用できません")
            
            logger.info(f"音声生成開始: {selected_provider.value}")
            
            # 音声生成実行
            tts_provider = self.providers[selected_provider]
            audio_info = await tts_provider.synthesize(text, output_path, voice_config)
            
            logger.info(f"音声生成完了: {audio_info.file_path}")
            return audio_info
            
        except Exception as e:
            logger.error(f"音声生成失敗: {e}")
            raise
    
    def _select_best_provider(
        self, 
        text: str, 
        voice_config: Optional[VoiceConfig]
    ) -> TTSProvider:
        """最適なプロバイダーを選択"""
        # 言語に基づく選択
        if voice_config and voice_config.language == "ja":
            # 日本語の場合の優先順位
            for provider in [TTSProvider.ELEVENLABS, TTSProvider.AZURE, TTSProvider.GOOGLE_CLOUD]:
                if provider in self.providers:
                    return provider
        
        # 英語やその他言語の場合
        for provider in [TTSProvider.OPENAI, TTSProvider.ELEVENLABS, TTSProvider.AZURE]:
            if provider in self.providers:
                return provider
        
        # デフォルト
        return self.default_provider
    
    async def get_available_voices(self, provider: TTSProvider) -> List[VoiceConfig]:
        """利用可能な音声一覧を取得"""
        if provider not in self.providers:
            return []
        
        return await self.providers[provider].get_voices()
    
    def get_provider_status(self) -> Dict[str, bool]:
        """プロバイダーの利用可能状況を取得"""
        return {
            provider.value: provider in self.providers
            for provider in TTSProvider
        }

class BaseTTS:
    """TTS基底クラス"""
    
    def __init__(self, api_key: str):
        self.api_key = api_key
    
    async def synthesize(
        self, 
        text: str, 
        output_path: Path, 
        voice_config: Optional[VoiceConfig]
    ) -> AudioInfo:
        """音声合成（サブクラスで実装）"""
        raise NotImplementedError
    
    async def get_voices(self) -> List[VoiceConfig]:
        """利用可能音声取得（サブクラスで実装）"""
        raise NotImplementedError

class ElevenLabsTTS(BaseTTS):
    """ElevenLabs TTS"""
    
    async def synthesize(
        self, 
        text: str, 
        output_path: Path, 
        voice_config: Optional[VoiceConfig]
    ) -> AudioInfo:
        """ElevenLabsで音声合成"""
        try:
            logger.info("ElevenLabs音声合成開始")
            
            # 実際のAPI呼び出しはここで実装
            # import requests
            # url = f"https://api.elevenlabs.io/v1/text-to-speech/{voice_id}"
            # headers = {"xi-api-key": self.api_key}
            # data = {"text": text, "model_id": "eleven_multilingual_v2"}
            # response = requests.post(url, json=data, headers=headers)
            
            # モック実装
            await asyncio.sleep(3)  # 合成時間をシミュレート
            
            # 空のファイルを作成
            output_path.parent.mkdir(parents=True, exist_ok=True)
            with open(output_path, 'wb') as f:
                f.write(b'mock_audio_data')  # プレースホルダー
            
            audio_info = AudioInfo(
                file_path=output_path,
                duration=len(text) * 0.1,  # 文字数から推定
                quality_score=0.95,
                sample_rate=44100,
                file_size=len(text) * 1000,
                language="ja",
                channels=1,
                provider="elevenlabs",
                voice_id=voice_config.voice_id if voice_config else "default"
            )
            
            return audio_info
            
        except Exception as e:
            logger.error(f"ElevenLabs音声合成失敗: {e}")
            raise
    
    async def get_voices(self) -> List[VoiceConfig]:
        """ElevenLabs音声一覧取得"""
        return [
            VoiceConfig("rachel", "en", "female", "adult", "american", "high"),
            VoiceConfig("adam", "en", "male", "adult", "american", "high"),
            VoiceConfig("domi", "en", "female", "young", "american", "high"),
            VoiceConfig("bella", "en", "female", "adult", "british", "high")
        ]

class OpenAITTS(BaseTTS):
    """OpenAI TTS"""
    
    async def synthesize(
        self, 
        text: str, 
        output_path: Path, 
        voice_config: Optional[VoiceConfig]
    ) -> AudioInfo:
        """OpenAIで音声合成"""
        try:
            logger.info("OpenAI音声合成開始")
            
            # 実際のAPI呼び出しはここで実装
            # from openai import OpenAI
            # client = OpenAI(api_key=self.api_key)
            # response = client.audio.speech.create(
            #     model="tts-1-hd",
            #     voice="alloy",
            #     input=text
            # )
            
            # モック実装
            await asyncio.sleep(2)
            
            output_path.parent.mkdir(parents=True, exist_ok=True)
            with open(output_path, 'wb') as f:
                f.write(b'mock_openai_audio')
            
            audio_info = AudioInfo(
                file_path=output_path,
                duration=len(text) * 0.08,
                quality_score=0.90,
                sample_rate=24000,
                file_size=len(text) * 800,
                language="en",
                channels=1,
                provider="openai",
                voice_id=voice_config.voice_id if voice_config else "alloy"
            )
            
            return audio_info
            
        except Exception as e:
            logger.error(f"OpenAI音声合成失敗: {e}")
            raise
    
    async def get_voices(self) -> List[VoiceConfig]:
        """OpenAI音声一覧取得"""
        return [
            VoiceConfig("alloy", "en", "neutral", "adult", "american", "high"),
            VoiceConfig("echo", "en", "male", "adult", "american", "high"),
            VoiceConfig("fable", "en", "male", "adult", "british", "high"),
            VoiceConfig("onyx", "en", "male", "adult", "american", "high"),
            VoiceConfig("nova", "en", "female", "adult", "american", "high"),
            VoiceConfig("shimmer", "en", "female", "adult", "american", "high")
        ]

class AzureTTS(BaseTTS):
    """Azure Speech Services TTS"""
    
    def __init__(self, api_key: str, region: str):
        super().__init__(api_key)
        self.region = region
    
    async def synthesize(
        self, 
        text: str, 
        output_path: Path, 
        voice_config: Optional[VoiceConfig]
    ) -> AudioInfo:
        """Azureで音声合成"""
        try:
            logger.info("Azure音声合成開始")
            
            # 実際のAPI呼び出しはここで実装
            # import azure.cognitiveservices.speech as speechsdk
            # speech_config = speechsdk.SpeechConfig(
            #     subscription=self.api_key, 
            #     region=self.region
            # )
            # synthesizer = speechsdk.SpeechSynthesizer(speech_config=speech_config)
            
            # モック実装
            await asyncio.sleep(2.5)
            
            output_path.parent.mkdir(parents=True, exist_ok=True)
            with open(output_path, 'wb') as f:
                f.write(b'mock_azure_audio')
            
            audio_info = AudioInfo(
                file_path=output_path,
                duration=len(text) * 0.09,
                quality_score=0.88,
                sample_rate=16000,
                file_size=len(text) * 600,
                language="ja",
                channels=1,
                provider="azure",
                voice_id=voice_config.voice_id if voice_config else "ja-JP-NanamiNeural"
            )
            
            return audio_info
            
        except Exception as e:
            logger.error(f"Azure音声合成失敗: {e}")
            raise
    
    async def get_voices(self) -> List[VoiceConfig]:
        """Azure音声一覧取得"""
        return [
            VoiceConfig("ja-JP-NanamiNeural", "ja", "female", "adult", "japanese", "high"),
            VoiceConfig("ja-JP-KeitaNeural", "ja", "male", "adult", "japanese", "high"),
            VoiceConfig("en-US-AriaNeural", "en", "female", "adult", "american", "high"),
            VoiceConfig("en-US-DavisNeural", "en", "male", "adult", "american", "high")
        ]

class GoogleCloudTTS(BaseTTS):
    """Google Cloud Text-to-Speech"""
    
    async def synthesize(
        self, 
        text: str, 
        output_path: Path, 
        voice_config: Optional[VoiceConfig]
    ) -> AudioInfo:
        """Google Cloudで音声合成"""
        try:
            logger.info("Google Cloud音声合成開始")
            
            # 実際のAPI呼び出しはここで実装
            # from google.cloud import texttospeech
            # client = texttospeech.TextToSpeechClient()
            # synthesis_input = texttospeech.SynthesisInput(text=text)
            
            # モック実装
            await asyncio.sleep(2)
            
            output_path.parent.mkdir(parents=True, exist_ok=True)
            with open(output_path, 'wb') as f:
                f.write(b'mock_google_audio')
            
            audio_info = AudioInfo(
                file_path=output_path,
                duration=len(text) * 0.085,
                quality_score=0.87,
                sample_rate=22050,
                file_size=len(text) * 700,
                language="ja",
                channels=1,
                provider="google_cloud",
                voice_id=voice_config.voice_id if voice_config else "ja-JP-Standard-A"
            )
            
            return audio_info
            
        except Exception as e:
            logger.error(f"Google Cloud音声合成失敗: {e}")
            raise
    
    async def get_voices(self) -> List[VoiceConfig]:
        """Google Cloud音声一覧取得"""
        return [
            VoiceConfig("ja-JP-Standard-A", "ja", "female", "adult", "japanese", "standard"),
            VoiceConfig("ja-JP-Standard-B", "ja", "female", "adult", "japanese", "standard"),
            VoiceConfig("ja-JP-Standard-C", "ja", "male", "adult", "japanese", "standard"),
            VoiceConfig("ja-JP-Standard-D", "ja", "male", "adult", "japanese", "standard")
        ]
